--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tanstack/react-query": "^5.71.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
