--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
-    "@tanstack/react-query": "^5.71.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
-    "zustand": "^5.0.3"
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fontsource/roboto": "5.2.5",
+    "@mui/icons-material": "7.0.1",
+    "@mui/material": "7.0.1",
+    "@tanstack/react-query": "5.71.5",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "7.4.1",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/ui": "^3.1.1",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "jsdom": "^26.0.0",
-    "sass": "^1.86.2",
+    "@eslint/js": "9.21.0",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/node": "22.14.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@types/react-router-dom": "5.3.3",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/ui": "3.1.1",
+    "eslint": "9.21.0",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "globals": "15.15.0",
+    "jsdom": "26.0.0",
+    "sass": "1.86.2",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "vitest": "^3.1.1"
+    "typescript-eslint": "8.24.1",
+    "vite": "6.2.0",
+    "vitest": "3.1.1"
   }
 }
